--- a/testcapture.ipynb
+++ b/testcapture.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,129 +136,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_fps(vidfile):\n",
     "    v = cv2.VideoCapture(vidfile)\n",
-    "    frames = 0\n",
-    "    while True:\n",
-    "        grabbed, _ = v.read()\n",
-    "        if not grabbed:\n",
-    "            break\n",
-    "        frames += 1\n",
-    "        if frames % 100 == 0:\n",
-    "            print(frames)\n",
-    "    seconds = v.get(cv2.CAP_PROP_POS_MSEC)/1000\n",
-    "    return frames/seconds"
+    "    return v.get(cv2.CAP_PROP_FPS)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100\n",
-      "200\n",
-      "300\n",
-      "400\n",
-      "500\n",
-      "600\n",
-      "700\n",
-      "800\n",
-      "900\n",
-      "1000\n",
-      "1100\n",
-      "1200\n",
-      "1300\n",
-      "1400\n",
-      "1500\n",
-      "1600\n",
-      "1700\n",
-      "1800\n",
-      "1900\n",
-      "2000\n",
-      "2100\n",
-      "2200\n",
-      "2300\n",
-      "2400\n",
-      "2500\n",
-      "2600\n",
-      "2700\n",
-      "2800\n",
-      "2900\n",
-      "3000\n",
-      "3100\n",
-      "3200\n",
-      "3300\n",
-      "3400\n",
-      "3500\n",
-      "3600\n",
-      "3700\n",
-      "3800\n",
-      "3900\n",
-      "4000\n",
-      "4100\n",
-      "4200\n",
-      "4300\n",
-      "4400\n",
-      "4500\n",
-      "4600\n",
-      "4700\n",
-      "4800\n",
-      "4900\n",
-      "5000\n",
-      "5100\n",
-      "5200\n",
-      "5300\n",
-      "5400\n",
-      "5500\n",
-      "5600\n",
-      "5700\n",
-      "5800\n",
-      "5900\n",
-      "6000\n",
-      "6100\n",
-      "6200\n",
-      "6300\n",
-      "6400\n",
-      "6500\n",
-      "6600\n",
-      "6700\n",
-      "6800\n",
-      "6900\n",
-      "7000\n",
-      "7100\n",
-      "7200\n",
-      "7300\n",
-      "7400\n",
-      "7500\n",
-      "7600\n",
-      "7700\n",
-      "7800\n",
-      "7900\n",
-      "8000\n",
-      "8100\n",
-      "8200\n",
-      "8300\n",
-      "8400\n",
-      "8500\n",
-      "8600\n",
-      "8700\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "29.969999999999995"
+       "29.97"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
